--- a/april-25th/form.html
+++ b/april-25th/form.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
-        <input type="text">
+    <form method="post">
+        <input type="text" name="test">
         <input type="submit">
     </form>
 </body>
