--- a/post-form-data/login.html
+++ b/post-form-data/login.html
@@ -7,11 +7,13 @@
     <title>login</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="postform" method="post">
         <label for="">UserName</label>
         <input type="text" name="name"><br>
         <label for="">Email</label>
         <input type="email" name="email"><br>
+        <label for="">Password</label>
+        <input type="password" name="password"><br>
         <input type="submit">
     </form>
 </body>
