--- a/chatApp/index.html
+++ b/chatApp/index.html
@@ -20,6 +20,7 @@
 
 </head>
 <body>
+    <h2 id="counter"></h2>
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
@@ -39,10 +40,10 @@
         }
     })
     socket.on('users connected',function(usersConnected){
-        let usercount = document.createElement('h2');
-        usercount.innerText = 'usersConnected';
-        body.appendChild(usercount);
-        // document.getElementsByTagName('h4');
+        let body = document.getElementById('counter')
+        // usercount.innerText = usersConnected;
+        
+        body.innerHTML = usersConnected;
         // usercount.appendChild(usersConnected);
     })
     socket.on('chat message', function(msg) {
